[package]
name = "serverless-crowbar"
version = "0.1.0"
publish = false

[lib]
crate-type = ["cdylib"]
name = "lambda"

[dependencies]
crowbar = { git = "https://github.com/softprops/rust-crowbar.git", branch = "re-export-cpython-macros" }
python3-sys = { version = "0.2.1", features = ["python-3-4"], optional = true }